# django-calculation

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
.github/workflows/: release.yml
calculation/: apps.py  widgets.py
calculation/static/calculation/js/: calculation.js
