[metadata]
name = django-calculation
version = 0.0.1
description = A Django app to make simple calculations in your django forms.
long_description = file: README.md
url = https://github.com/blasferna/django-calculation
author = Blas Isaias Fernandez
author_email = blasferna@gmail.com
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
package_dir=
    =calculation
packages=find:
python_requires = >=3.6
install_requires =
    Django >= 2.2
